rusthelloworld.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      hello: world
  template:
    metadata:
      labels:
        hello: world
    spec:
      containers:
      - name: helloworld
        image: localhost:5000/rust_hello_world:1.2
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: istio-system
spec:
  type: ClusterIP
  selector:
    hello: world
  ports:
  - port: 9000
    targetPort: 8080
    name: http
